# goit-pythonweb-hw-06

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: configuration.py  main.py  models.py  my_select.py  seed.py
src/alembic/: env.py
src/alembic/versions/: 0da52febc068_update_models_1.py  7191ec2d7472_create_updated_tables.py  7dbf222063e7_add_mocked_data.py  ebc07e711977_create_initial_tables.py  f74a7c35d871_last_updates_with_models_id_.py
